/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.mycompany.producto_academico_01;

/**
 *
 * @author JOSE
 */
public class Alumno extends Persona {
    private String codigo;
    private int celular;

    public void registrarAlumno() {        
    }

    public void listarAlumno(String codigo_grupo) {
    }
}
