/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Project/Maven2/JavaApp/src/main/java/${packagePath}/${mainClassName}.java to edit this template
 */

package com.mycompany.producto_academico_01;

/**
 *
 * @author JOSE
 */
public class Persona {

    private String nombre;
    private String apellido_paterno;
    private String apellido_materno;
}
