@startuml
    class Persona{
        #nombre : String
        #apellido_paterno : String
        #apellido_materno : String
    }

    class Alumno {
        -codigo : String
        -celular : int
        +{abstract}void registrarAlumno()
        +{abstract}void listarAlumno(string codigo_grupo)
    }

    class Docente{
        -resumen_ejecutivo : String
        +{abstract}void registrarDocente()
    }

    class Supervisor{
        -dni : int
        -correo : String
        +{abstract}void registrarSupervisor()
    }

    class Administrativo{
        -dni: int
        -correo: String
        -salario: float
        +{abstract}void registrarAdministrativo()
    }

    class Grupo{
        -codigo : String
        -fecha_creacion : Date
        +{abstract}void agregarAlumno(string codigo_alumno)
        +{abstract}void listarGrupo(date fecha_creacion)
    }

    class Sesion{
        -fechaDictado : Date
        -tema : String
        -dificultad : Int
        -descripcion : String
        +{abstract}void registrarSesion()
        +{abstract}void listarSesiones(date fecha_inicio, date fecha_final)
    }

    class Ambiente{
        -codigo : String
        -nombre_largo : String
        -nombre_corto : String
        -area : Double
        +{abstract}void registrarAmbiente()
    }

    class Recurso{
        -tipo: String
        -cantidad: int
        -costo_unitario: float
        +{abstract}void registrarRecurso()
        +{abstract}void listarRecursos(string codigo_ambiente)
    }

    class Grado{
        -codigo: String
        +{abstract}void registrarGrado()
    }

    class Asignatura{
        -codigo: String
        -nombre: String
        +{abstract}void registrarAsignatura()
        +{abstract} void listarAsignaturas(string codigo_grado)
    }

    Persona <|-- Alumno
    Persona <|-- Docente
    Persona <|-- Supervisor
    Persona <|-- Administrativo
    Grupo "n" -- "1" Supervisor
    Grupo "1" -- "n" Alumno
    Grupo "1" -- "n" Sesion
    Sesion "n" -- "n" Docente
    Sesion "1" -- "n" Ambiente
    Recurso "n" -- "n" Ambiente
    Grado "1" -- "n" Asignatura
    Docente "1" -- "1" Asignatura
@enduml
